fdo#54686 Treat hard blank as soft blank in number

AutoCorrect option "Add non-breaking space in French..." insert
non-breaking space (hard blank) and avoid recognition of percent
number and time number. This patch treats hard blanks as soft blank
in number format recognition

Rev.#1: change #define to const variable. Same change in svxaccor

Change-Id: I30c2c36778cb53a0238a0829043dad4d709f97d2